fix: properly import global.css

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,3 @@
----
-import './src/styles/global.css';
----
 <!doctype html>
 <html lang="en" class="scroll-smooth">
 	<head>
@@ -9,6 +6,7 @@ import './src/styles/global.css';
 		<meta name="description" content="Webverse - Professional Web Development Agency" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" type="" href="./src/styles/global.css" />
 		<meta name="generator" content={Astro.generator} />
 		<title>Webverse</title>
 	</head>
